-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.4.0, 5.4.1, 5.5.0 Alpha, 5.5.0 Beta
-
None
-
Arch Linux, Qt 5.4.1 and Qt 5.5 beta
-
0b3da1907d46a03e8838c4086b23d48ba69c8776
Drag and drop stops when window is minimized during dnd operation.
Steps to reproduce on KDE4:
- be sure that you have at least two virtual desktops (if you are using compositing, be sure that "Always (breaks minimization)" is NOT selected),
- open the application from attachment on virtual desktop 1,
- start drag (from applications window),
- now, you can drop it everywhere,
- change to the second desktop using keyboard (Ctrl+F2) (the windows is in minimized state now, see console output),
- now the dnd icon can't move, you can't drop the item,
- go back into first desktop (Ctrl+F1),
- now you can dnd only inside applications window, so you can't dnd into other application.
Works OK with Qt4.x.
For Gerrit Dashboard: QTBUG-46243 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
138217,4 | xcb: fix drag and drop when window is hidden | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |